tests/dataset/tpc-ds/compiler/c/q90.error
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c:213:26: warning: implicit declaration of function ‘web_sale_list_t_create’ [-Wimplicit-function-declaration]
  213 |   web_sale_list_t tmp1 = web_sale_list_t_create(
      |                          ^~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c:214:16: error: ‘(web_sale_t *)&web_sales’ is a pointer; did you mean to use ‘->’?
  214 |       web_sales.len * household_demographics.len * time_dim.len * web_page.len);
      |                ^
      |                ->
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c:214:45: error: ‘(household_demographic_t *)&household_demographics’ is a pointer; did you mean to use ‘->’?
  214 |       web_sales.len * household_demographics.len * time_dim.len * web_page.len);
      |                                             ^
      |                                             ->
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c:214:60: error: ‘(time_dim_t *)&time_dim’ is a pointer; did you mean to use ‘->’?
  214 |       web_sales.len * household_demographics.len * time_dim.len * web_page.len);
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c:214:75: error: ‘(web_page_t *)&web_page’ is a pointer; did you mean to use ‘->’?
  214 |       web_sales.len * household_demographics.len * time_dim.len * web_page.len);
      |                                                                           ^
      |                                                                           ->
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c:246:16: error: ‘(web_sale_t *)&web_sales’ is a pointer; did you mean to use ‘->’?
  246 |       web_sales.len * household_demographics.len * time_dim.len * web_page.len);
      |                ^
      |                ->
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c:246:45: error: ‘(household_demographic_t *)&household_demographics’ is a pointer; did you mean to use ‘->’?
  246 |       web_sales.len * household_demographics.len * time_dim.len * web_page.len);
      |                                             ^
      |                                             ->
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c:246:60: error: ‘(time_dim_t *)&time_dim’ is a pointer; did you mean to use ‘->’?
  246 |       web_sales.len * household_demographics.len * time_dim.len * web_page.len);
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq904154856666/001/prog.c:246:75: error: ‘(web_page_t *)&web_page’ is a pointer; did you mean to use ‘->’?
  246 |       web_sales.len * household_demographics.len * time_dim.len * web_page.len);
      |                                                                           ^
      |                                                                           ->
