tests/dataset/tpc-ds/compiler/c/q90.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:48Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:48Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct WebSale WebSale;

typedef struct {
  int ws_sold_time_sk;
  int ws_ship_hdemo_sk;
  int ws_web_page_sk;
} web_sale_t;

typedef struct {
  int hd_demo_sk;
  int hd_dep_count;
} household_demographic_t;
typedef struct {
  int len;
  household_demographic_t *data;
} household_demographic_list_t;
household_demographic_list_t create_household_demographic_list(int len) {
  household_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(household_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int t_time_sk;
  int t_hour;
} time_dim_t;
typedef struct {
  int len;
  time_dim_t *data;
} time_dim_list_t;
time_dim_list_t create_time_dim_list(int len) {
  time_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(time_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int wp_web_page_sk;
  int wp_char_count;
} web_page_t;
typedef struct {
  int len;
  web_page_t *data;
} web_page_list_t;
web_page_list_t create_web_page_list(int len) {
  web_page_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_page_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct WebSale {
  int ws_sold_time_sk;
  int ws_ship_hdemo_sk;
  int ws_web_page_sk;
} WebSale;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static double test_TPCDS_Q90_ratio_result;
static void test_TPCDS_Q90_ratio() {
  if (!(test_TPCDS_Q90_ratio_result == 2.0)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  web_sale_t web_sales[] = {
      (web_sale_t){
          .ws_sold_time_sk = 1, .ws_ship_hdemo_sk = 1, .ws_web_page_sk = 10},
      (web_sale_t){
          .ws_sold_time_sk = 1, .ws_ship_hdemo_sk = 1, .ws_web_page_sk = 10},
      (web_sale_t){
          .ws_sold_time_sk = 2, .ws_ship_hdemo_sk = 1, .ws_web_page_sk = 10}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  household_demographic_t household_demographics[] = {
      (household_demographic_t){.hd_demo_sk = 1, .hd_dep_count = 2}};
  int household_demographics_len =
      sizeof(household_demographics) / sizeof(household_demographics[0]);
  time_dim_t time_dim[] = {(time_dim_t){.t_time_sk = 1, .t_hour = 7},
                           (time_dim_t){.t_time_sk = 2, .t_hour = 14}};
  int time_dim_len = sizeof(time_dim) / sizeof(time_dim[0]);
  web_page_t web_page[] = {
      (web_page_t){.wp_web_page_sk = 10, .wp_char_count = 5100}};
  int web_page_len = sizeof(web_page) / sizeof(web_page[0]);
  web_sale_list_t tmp1 = web_sale_list_t_create(
      web_sales.len * household_demographics.len * time_dim.len * web_page.len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < web_sales_len; tmp3++) {
    web_sale_t ws = web_sales[tmp3];
    for (int tmp4 = 0; tmp4 < household_demographics_len; tmp4++) {
      household_demographic_t hd = household_demographics[tmp4];
      if (!(ws.ws_ship_hdemo_sk == hd.hd_demo_sk)) {
        continue;
      }
      for (int tmp5 = 0; tmp5 < time_dim_len; tmp5++) {
        time_dim_t t = time_dim[tmp5];
        if (!(ws.ws_sold_time_sk == t.t_time_sk)) {
          continue;
        }
        for (int tmp6 = 0; tmp6 < web_page_len; tmp6++) {
          web_page_t wp = web_page[tmp6];
          if (!(ws.ws_web_page_sk == wp.wp_web_page_sk)) {
            continue;
          }
          if (!(t.t_hour >= 7 && t.t_hour <= 8 && hd.hd_dep_count == 2 &&
                wp.wp_char_count >= 5000 && wp.wp_char_count <= 5200)) {
            continue;
          }
          tmp1.data[tmp2] = ws;
          tmp2++;
        }
      }
    }
  }
  tmp1.len = tmp2;
  int amc = tmp1.len;
  web_sale_list_t tmp7 = web_sale_list_t_create(
      web_sales.len * household_demographics.len * time_dim.len * web_page.len);
  int tmp8 = 0;
  for (int tmp9 = 0; tmp9 < web_sales_len; tmp9++) {
    web_sale_t ws = web_sales[tmp9];
    for (int tmp10 = 0; tmp10 < household_demographics_len; tmp10++) {
      household_demographic_t hd = household_demographics[tmp10];
      if (!(ws.ws_ship_hdemo_sk == hd.hd_demo_sk)) {
        continue;
      }
      for (int tmp11 = 0; tmp11 < time_dim_len; tmp11++) {
        time_dim_t t = time_dim[tmp11];
        if (!(ws.ws_sold_time_sk == t.t_time_sk)) {
          continue;
        }
        for (int tmp12 = 0; tmp12 < web_page_len; tmp12++) {
          web_page_t wp = web_page[tmp12];
          if (!(ws.ws_web_page_sk == wp.wp_web_page_sk)) {
            continue;
          }
          if (!(t.t_hour >= 14 && t.t_hour <= 15 && hd.hd_dep_count == 2 &&
                wp.wp_char_count >= 5000 && wp.wp_char_count <= 5200)) {
            continue;
          }
          tmp7.data[tmp8] = ws;
          tmp8++;
        }
      }
    }
  }
  tmp7.len = tmp8;
  int pmc = tmp7.len;
  double result = ((double)(amc)) / ((double)(pmc));
  _json_float(result);
  test_TPCDS_Q90_ratio_result = result;
  test_TPCDS_Q90_ratio();
  return 0;
}
